Added missing LICENSE file in Python package

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = mikan
 version = attr: mikan.__version__
 url = https://github.com/dzzhvks94vd2/mikan
 license = MIT
+license_files = LICENSE
 author = dzzhvks94vd2
 author_email = dzzhvks94vd2@protonmail.com
 description = A Japanese language manipulation library
